Status Propagation (Part 1)
We need to propagate the status of machines and workload pools up to the
API so clients can actually see them, and most pertinently get the
hostnames and IP addresses.
